@@ -1,7 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
-    i18n_domain="collective.solr">
+    i18n_domain="solr">
 
   <browser:resourceDirectory
       name="collective.solr.images"
