@@ -6,7 +6,7 @@
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
-    i18n_domain="collective.solr">
+    i18n_domain="solr">
 
   <five:registerPackage package="." />
 
